<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UrbanCikarang</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_twit">UrbanCikarang on tweet</string>
    <string name="welcome">Welcome to UrbanCikarang</string>
    <string name="title_activity_twit">UrbanCikarang on tweet</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit Application?</string>
    <string name="title_exit">Exit!</string>
    <string name="alert">INFO</string>
    <string name="koneksi">This app need internet connection, Continue?</string>
    <string name="ntar">Later</string>
    <string name="tunggu">Please wait until the page loaded</string>
    <string name="putus">No internet connection, Exiting…</string>
    <string name="title_activity_about">About application</string>
    <string name="tentang">UrbanCikarang (Unofficial)</string>
    <string name="credit">Click icon above to see credit list</string>
    <string name="tutup">Close</string>
    <string name="daftar_credit">UrbanCikarang is a social media that giving uptodate news about Cikarang and surroundings.\n \nThis Application unofficially maded by Dede Ahmad Fawzy aka @FawzyDede\n \nCredits goes to:\n• Vikar Ahmadi aka @VikarELMahdi\n• Febby Arisandy aka @Gentong90</string>
    <string name="jomblo">©2015 Dede Fawzy\nFull Support for UrbanCikarang</string>
    <string name="feedback">Send feedback</string>
    <string name="yoik">Yes</string>
    <string name="mbung">No</string>
    <string name="keep_utd">Keep uptodate &amp; know more about Cikarang</string>
    <string name="aksi">Complete action using</string>
    <string name="iklan">Make ads on UrbanCikarang</string>
    <string name="isi_iklan">Jenis iklan :\n \nRincian iklan :</string>
    <string name="partner">Media Partner UrbanCikarang</string>
    <string name="changelog">View Changelog</string>
    <string name="title_activity_changelog">Noticeable Changelog</string>
    <string name="str_btn_find">Find</string>

    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>fire_station</item>
        <item>gas_station</item>
        <item>bus_station</item>
        <item>church</item>
        <item>hindu_temple</item>
        <item>mosque</item>
        <item>school</item>
        <item>university</item>
        <item>movie_theater</item>
        <item>restaurant</item>
        <item>clothing_store</item>
        <item>electronics_store</item>


    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>Atm</item>
        <item>Bank</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Fire station</item>
        <item>Gas station</item>
        <item>Bus station</item>
        <item>Church</item>
        <item>Hindu temple</item>
        <item>Mosque</item>
        <item>School</item>
        <item>University</item>
        <item>Movie theater</item>
        <item>Restaurant</item>
        <item>Clothing store</item>
        <item>Electronics store</item>


    </string-array>

    <string name="title_activity_cikarang_nearby">Places near you</string>
    <string name="detail_place">Detail</string>
    <string name="normal">Normal</string>
    <string name="satelit">Satellite</string>
    <string name="terrain">Terrain</string>

</resources>
