<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Master">
    <item android:id="@+id/action_twit" android:title="@string/action_twit"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_nearby" android:title="Nearby Places"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_iklan" android:title="@string/iklan"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_partner" android:title="@string/partner"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_feedback" android:title="@string/feedback"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_exit" android:title="@string/title_exit"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
