<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bagen.ilok.urbancikarang.About"
    android:background="#53008dff">

    <TextView
        android:id="@+id/tentang_atas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentang"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/keep_utd"
        android:id="@+id/biar_gaul"
        android:layout_below="@+id/tentang_atas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creditButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/urban_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/credit"
        android:textColor="#FFFFFF"
        android:id="@+id/textcredit"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/creditButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/jomblo"
        android:id="@+id/textcopyright"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/changelog"
        android:textColor="#FFFFFF"
        android:id="@+id/changelogButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingTop="30dp"
        android:background="#00000000" />

</RelativeLayout>
